--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://cstumph.github.io/lolwut",
   "devDependencies": {
     "enzyme": "^2.7.1",
+    "gh-pages": "^0.12.0",
     "jest-enzyme": "^2.1.2",
     "nock": "^9.0.9",
     "react-addons-test-utils": "^15.4.2",
